--- a/css/index.css
+++ b/css/index.css
@@ -103,14 +103,42 @@
     display: flex;
     justify-content: center;
     align-items: center;
+    height: 5rem;
   }
+
+  .services-p1,
+  .services-p2,
+  .services-p3 {
+    display: flex;
+    width: 100%;
+    justify-content: center;
+    align-items: center;
+    font-family: "Exo", sans-serif;
+    font-style: italic;
+    font-size: 1.5rem;
+    font-weight: 500;
+    cursor: pointer;
+    transition: background-color 0.3s;
+    transition: transform 0.3s;
+    background-color: #000000;
+    height: 2.44rem;
+  }
+
+  .services-icon1,
+  .services-icon2,
+  .services-icon3 {
+    width: 4rem;
+    padding: 1rem;
+    height: 4rem;
+  }
+
 
   .container-the-services {
     display: grid;
     background-color: none;
     color: white;
     margin: auto 2rem auto 2rem;
-    gap: 2rem;
+    gap: 1rem;
   }
 
   a {
@@ -131,12 +159,6 @@
     cursor: pointer;
   }
 
-  .services-icon1,
-  .services-icon2,
-  .services-icon3 {
-    width: 6.25rem;
-    padding: 1rem;
-  }
 
   @keyframes talk {
     0%,
@@ -205,21 +227,6 @@
     }
   }
 
-  .services-p1,
-  .services-p2,
-  .services-p3 {
-    display: flex;
-    width: 100%;
-    justify-content: center;
-    font-family: "Exo", sans-serif;
-    font-style: italic;
-    font-size: 1.4rem;
-    font-weight: 500;
-    cursor: pointer;
-    transition: background-color 0.3s;
-    transition: transform 0.3s;
-    background-color: #000000;
-  }
 
   .services-p1:hover,
   .services-p2:hover,
