--- a/css/index.css
+++ b/css/index.css
@@ -98,6 +98,7 @@
 
   .main {
     border: 0;
+    display:grid
   }
 
   .container-img {
@@ -116,7 +117,7 @@
     align-items: center;
     font-family: "Exo", sans-serif;
     font-style: italic;
-    font-size: 1.5rem;
+    font-size: 1.4rem;
     font-weight: 500;
     cursor: pointer;
     transition: background-color 0.3s;
