--- a/css/index.css
+++ b/css/index.css
@@ -9,6 +9,7 @@
     padding: 0;
     font-family: "Open Sans", sans-serif;
     background-color: #e5e4e2;
+    height: 100vh;
   }
 
   /* Estructura grid del header, main, footer */
@@ -107,7 +108,7 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    height: 5rem;
+    height: 4.5rem;
   }
 
   .services-p1,
