--- a/css/index.css
+++ b/css/index.css
@@ -9,7 +9,7 @@
     padding: 0;
     font-family: "Open Sans", sans-serif;
     background-color: #e5e4e2;
-    height: 100vh;
+    height: 100%;
   }
 
   /* Estructura grid del header, main, footer */
