--- a/css/index.css
+++ b/css/index.css
@@ -16,6 +16,7 @@
 
   .estructure-grid {
     display: grid;
+    gap: 2rem;
     grid-template:
       "header" 6rem
       "main" auto
@@ -100,14 +101,13 @@
     border: 0;
     margin: 0;
     padding: 0;
-    display:grid
   }
 
   .container-img {
     display: flex;
     justify-content: center;
     align-items: center;
-    height: 4.5rem;
+    height: 4rem;
   }
 
   .services-p1,
@@ -125,24 +125,25 @@
     transition: background-color 0.3s;
     transition: transform 0.3s;
     background-color: #000000;
-    height: 2.28rem;
+    height: 5vh;
   }
 
   .services-icon1,
   .services-icon2,
   .services-icon3 {
-    width: 4rem;
-    padding: 1rem;
-    height: 4rem;
+    width: 8vh;
+    height: 8vh;
   }
 
 
   .container-the-services {
     display: grid;
+    align-items:center;
     background-color: none;
     color: white;
-    margin: auto 2rem auto 2rem;
-    gap: 2rem;
+    margin: 0 2rem 0 2rem;
+    border: 0;
+
   }
 
   a {
