--- a/css/index.css
+++ b/css/index.css
@@ -363,7 +363,7 @@
     margin: 0;
     padding: 0;
     font-family: "Open Sans", sans-serif;
-    background-color: #0ee90e;
+    background-color: #e2e5e2;
   }
 
   /* Estructura grid del header, main, footer */
