--- a/css/index.css
+++ b/css/index.css
@@ -3,7 +3,8 @@
 /*Pantallas para moviles*/
 
 @media screen and (max-width: 767px) {
-  body, html {
+  body,
+  html {
     border: 0;
     margin: 0;
     padding: 0;
@@ -42,7 +43,6 @@
     animation: changeBorderColor 2.2s linear infinite; /* Aplica la animación de cambio de color del borde */
   }
 
-
   .logo {
     display: flex;
     justify-content: space-between;
@@ -67,7 +67,6 @@
     padding: 0;
     color: #00b9e8;
   }
-
 
   .pc {
     color: #00b9e8;
@@ -135,15 +134,13 @@
     height: 7vh;
   }
 
-
   .container-the-services {
     display: grid;
-    align-items:center;
+    align-items: center;
     background-color: none;
     color: white;
     margin: 0 2rem 0 2rem;
     border: 0;
-
   }
 
   a {
@@ -163,7 +160,6 @@
   .services-p {
     cursor: pointer;
   }
-
 
   @keyframes talk {
     0%,
@@ -231,7 +227,6 @@
       transform: scale(1);
     }
   }
-
 
   .services-p1:hover,
   .services-p2:hover,
@@ -359,23 +354,20 @@
 /*Pantallas para escritorios*/
 
 @media screen and (min-width: 768px) {
-  body {
-    margin: 0;
-    padding: 0;
-    font-family: "Open Sans", sans-serif;
-    background-color: #e2e5e2;
-  }
-
   /* Estructura grid del header, main, footer */
 
   .estructure-grid {
     display: grid;
-    gap: 3.86rem;
+height: 100vh;
     grid-template:
       "header" 6rem
       "main" auto
       "footer" 6rem;
-      overflow-y: hidden;
+    /*overflow-y: ;*/
+    margin: 0;
+    padding: 0;
+    font-family: "Open Sans", sans-serif;
+    background-color: #e2e5e2;
   }
 
   .estructure-grid > * {
@@ -479,13 +471,12 @@
   .container-the-services {
     display: flex;
     justify-content: space-around;
+    align-items: center;
     background-color: white;
     padding: 5rem 0 5rem 0;
     color: white;
     gap: 2rem;
-    border-top: 2px solid #000000;
-    border-bottom: 2px solid #000000;
-    box-shadow: 0px 0px 10px 1px black;
+    
   }
 
   a {
@@ -609,7 +600,7 @@
     background-color: #000000;
     box-shadow: 0px 0px 10px 1px black;
     border: none;
-    border-top: 0.125rem black solid;
+    border-top: 0.125rem solid;
     animation: changeBorderColor 2.2s linear infinite; /* Aplica la animación de cambio de color del borde */
   }
 
